[gd_scene load_steps=5 format=3 uid="uid://bxvw8y7qkqx5"]

[ext_resource type="Script" uid="uid://ccwl8nn142nqx" path="res://actors/DangerousSpike.gd" id="1_spike"]
[ext_resource type="Texture2D" uid="uid://cqlho50pcikb0" path="res://content/Graphics/Sprites/Tiles/Double/spikes.png" id="2_l61gh"]
[ext_resource type="Script" uid="uid://b7mskwqthxt0g" path="res://systems/DimensionNode.gd" id="3_dimension"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_spike"]
size = Vector2(53.76, 67.2)

[node name="DangerousSpike" type="Area2D"]
script = ExtResource("1_spike")

[node name="SpikeSprite" type="ColorRect" parent="."]
visible = false
offset_left = -14.0
offset_top = -16.0
offset_right = 14.0
color = Color(0.6, 0.6, 0.6, 0.3)

[node name="SpikeLabel" type="Label" parent="."]
visible = false
offset_left = -8.0
offset_top = -17.0
offset_right = 8.0
theme_override_font_sizes/font_size = 12
text = "ðŸ”º"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.8)
shape = SubResource("RectangleShape2D_spike")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.8, 0.8, 0.8, 1)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_l61gh")

[node name="DimensionNode" type="Node" parent="."]
script = ExtResource("3_dimension")
